--- a/website/waltr/package.json
+++ b/website/waltr/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/katex": "^0.16.8",
+    "katex": "^0.16.33",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-katex": "^3.1.0",
     "react-sketch-canvas": "^6.2.0"
   },
   "devDependencies": {
